Conversation, message Models - Socket Connected

--- a/songHaven-IOS/songHaven-IOS/en.lproj/Localizable.strings
+++ b/songHaven-IOS/songHaven-IOS/en.lproj/Localizable.strings
@@ -49,3 +49,7 @@
 "languageSheetTxt1" = "Select a Language :";
 "languageSheetTxt2" = "Apply";
 
+"profileTxt1" = "Likes";
+"profileTxt2" = "Songs";
+"profileTxt3" = "Edit Profile";
+
