--- a/songHaven-IOS/songHaven-IOS/en.lproj/Localizable.strings
+++ b/songHaven-IOS/songHaven-IOS/en.lproj/Localizable.strings
@@ -11,6 +11,12 @@
 "loginTxt3" = "password..";
 "loginTxt4" = "Sign In";
 "loginTxt5" = "Sign Up";
+"google" = "Continue with Google";
+
+"alertTitle" = "Account not Verified";
+"alertMessage" = "This email is not confirmed, would you like to resend the confirmation email to ";
+"sendEmail" = "Send Email";
+
 
 //SIGN UP VIEW
 "SignUpTxt1" = "Join Us Now";
@@ -44,6 +50,7 @@
 
 //ProfileView
 "ProfileOptions1" = "Change Language";
+"termsCnditions" = "Terms & Conditions";
 "ProfileOptions2" = "Log out";
 
 "languageSheetTxt1" = "Select a Language :";
@@ -52,4 +59,38 @@
 "profileTxt1" = "Likes";
 "profileTxt2" = "Songs";
 "profileTxt3" = "Edit Profile";
+"addSong" = "Add song";
+
+"areYouSureLogOut" = "Are You sure You want Log out ?";
+"logOut" = "Log out";
+"cancel" = "Cancel";
+
+"areYouSureDeleteSong" = "Are You sure You want to delete this song?";
+"delete" = "Delete";
+
+//CreateSongView
+"title" = "Title";
+"genre" = "Genre";
+"selectAudioFile" = "select audio file";
+"publishSong" = "Publish Song";
+"addNewSong" = "Add a new song";
+
+//ResetPasswordView
+"creatNewPassword" = "Create new password";
+"pleaseEnterNewPassword" = "Please enter your new password:";
+"enterNewPassword" = "Enter new password";
+"confirmPassword" = "Confirm Password";
+"resetPassword" = "Reset Password";
+
+//ResetPasswordView
+"confirmationCode" = "Confirmation Code";
+"pleaseEnterThe5DigitCode" = "Please enter the 5 digit code sent to your email:";
+"didNotReceiveCode" = "Did not receive a code?";
+"resend" = "Resend";
+"verify" = "Verify";
+
+"alertTtile" = "Access Denied";
+"alertMessage" = "The code entered does not match, Please Try Again.";
+
+"notificationTitle" = "Email Sent";
 
