Configuring app icon

--- a/songHaven-IOS/songHaven-IOS/en.lproj/Localizable.strings
+++ b/songHaven-IOS/songHaven-IOS/en.lproj/Localizable.strings
@@ -130,8 +130,13 @@
 "Txt5" = "Date event";
 "Txt6" = "Save";
 
-// editEvent
+//editEvent
 "EditTxt1" = "Modify for  your event";
 "EditTxt2" = "Choose title";
 "EditTxt3" = "Describe your event";
 "EditTxt4" = "Save";
+
+//SuggestionView
+"SearchTXT" = "Search";
+"noUsers" = "No users found";
+
